<resources>
    <string name="app_name">ABV Price Comparison</string>
    <string name="action_settings">Settings</string>
    <string name="volume">Volume</string>
    <string name="abv_percent">ABV (Percent)</string>
    <string name="price">Price</string>
    <string name="beer_name">Beer Name</string>
    <string name="beer_list_view_subtitle_placeholder">$%1$s for %2$s %3$s at %4$s%%</string>
    <string name="add_new">Add New Entry</string>
    <string name="button_save">Save</string>
    <string name="entry_not_saved">Entry not saved</string>
    <string name="empty_entry_set">No Hay Nada</string>
    <string name="validation_error_beer_name">Name can\'t be empty</string>
    <string name="validation_error_beer_price">Price must be greater than 0.00</string>
    <string name="validation_error_beer_abv">ABV has to be a valid percent between 1 and 100</string>
    <string name="validation_error_beer_volume">Volume needs to be greater than 0</string>
    <string name="button_cancel">Cancel</string>
    <string name="validation_error_empty_abv">ABV can\'t be empty</string>
    <string name="delete_all_entries">Remove all entries</string>
    <string name="delete_selected_entries">Remove selected</string>
    <string name="action_remove_single_entry">Delete</string>
    <string name="undo_snackbar_text">Undo delete?</string>
    <string name="undo_snackbar_undo">Undo</string>
</resources>
